cmake_minimum_required(VERSION 3.16)

add_subdirectory(alarmhello)
add_subdirectory(cat)
add_subdirectory(div0)
add_subdirectory(daytime)
add_subdirectory(echo)
add_subdirectory(forktest)
add_subdirectory(grep)
add_subdirectory(init)
add_subdirectory(kill)
add_subdirectory(ln)
add_subdirectory(ls)
add_subdirectory(mkdir)
add_subdirectory(ping)
add_subdirectory(rm)
add_subdirectory(sh)
add_subdirectory(stressfs)
add_subdirectory(tcpecho)
add_subdirectory(usertests)
add_subdirectory(waittest)
add_subdirectory(wc)
add_subdirectory(zombie)